# pytest-flakedoctor

./: CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: demo_flaky.py
src/flakedoctor/: __init__.py  _axes.py  _cli.py  _diagnose.py  _fingerprint.py  _interleave.py  _plugin.py  _probe.py  _report.py  _repro.py  _runner.py  _stats.py
tests/: _support.py  conftest.py  test_diagnose.py  test_e2e.py  test_e2e_axes.py  test_e2e_interleave.py  test_e2e_order.py  test_fingerprint.py  test_marker.py  test_plugin_integration.py  test_repro.py  test_runner.py  test_stats.py
